--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "homepage": "https://github.com/WhoIsPeter/Captain-Teemo#readme",
   "dependencies": {
     "discord.js": "^11.1.0",
-    "discord.js-commando": "^0.9.0"
+    "discord.js-commando": "^0.9.0",
+    "request": "^2.81.0"
   },
   "engines": {
     "node": "8.0.0",
